libraries/ckit/regression/valid-programs/a32.c
int f();

int f(int c) {
  return(c);
}



main()
{
  char c;
  f(c);

}



