libraries/ckit/regression/invalid-programs/r39.c
int f(float);

int f(int x) {
 return(x);
}

main () {
 return(0);
}
